force-app/main/default/objects/Assignment__c/fields/Service_Deal__c.field-meta.xml
<CustomField>
    <fullName>Service_Deal__c</fullName>
    <description>Masterdetail relationship (assignment(child) - service deal)</description>
    <label>Service Deal</label>
    <referenceTo>Service_Deal__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>